language/move-lang/tests/move_check/typing/constraints_not_satisfied_type_arguments_internal_pack.exp
error: 

   ┌── tests/move_check/typing/constraints_not_satisfied_type_arguments_internal_pack.move:8:9 ───
   │
 8 │         Box<CupD<R>>{};
   │         ^^^^^^^^^^^^^^ Cannot ignore values without the 'drop' ability. The value must be used
   ·
 8 │         Box<CupD<R>>{};
   │         -------------- The type '0x8675309::M::Box<0x8675309::M::CupD<0x8675309::M::R>>' does not have the ability 'drop'
   ·
 8 │         Box<CupD<R>>{};
   │             ------- The type '0x8675309::M::Box<0x8675309::M::CupD<0x8675309::M::R>>' can have the ability 'drop' but the type argument '0x8675309::M::CupD<0x8675309::M::R>' does not have the required ability 'drop'
   │

error: 

   ┌── tests/move_check/typing/constraints_not_satisfied_type_arguments_internal_pack.move:8:13 ───
   │
 8 │         Box<CupD<R>>{};
   │             ^^^^^^^ 'drop' constraint not satisifed
   ·
 8 │         Box<CupD<R>>{};
   │                  - The type '0x8675309::M::R' does not have the ability 'drop'
   ·
 3 │     struct R {}
   │            - To satisify the constraint, the 'drop' ability would need to be added here
   ·
 2 │     struct CupD<T: drop> has drop {}
   │                    ---- 'drop' constraint declared here
   │

error: 

   ┌── tests/move_check/typing/constraints_not_satisfied_type_arguments_internal_pack.move:9:9 ───
   │
 9 │         Box<R>{};
   │         ^^^^^^^^ Cannot ignore values without the 'drop' ability. The value must be used
   ·
 9 │         Box<R>{};
   │         -------- The type '0x8675309::M::Box<0x8675309::M::R>' does not have the ability 'drop'
   ·
 9 │         Box<R>{};
   │             - The type '0x8675309::M::Box<0x8675309::M::R>' can have the ability 'drop' but the type argument '0x8675309::M::R' does not have the required ability 'drop'
   │

