language/move-lang/tests/move_check/typing/constraints_not_satisfied_type_arguments_internal_pack.move
module M {
    struct CupD<T: drop> has drop {}
    struct R {}

    struct Box<T> has drop {}

    fun foo() {
        Box<CupD<R>>{};
        Box<R>{};
    }

}
